# edtui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: default.themedump
examples/: app.rs  app.tape  custom_keybindings.rs  highlights.rs  line_numbers.rs  single.rs  single_line_emacs.rs  syntax_highlighting.tape  system_editor.rs
examples/app/: app.rs  main.rs  root.rs  term.rs  theme.rs
examples/emacs/: app.rs  main.rs  theme.rs
examples/single/: main.rs  root.rs  term.rs
examples/syntax_highlighting/: app.rs  main.rs  theme.rs
examples/test_text/: main.rs  theme.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: state.rs
src/: actions.rs  buffer.rs  clipboard.rs  debug.rs  editor.rs  helper.rs  input.rs  internal.rs  lib.rs  lines.rs  state.rs  syntax_higlighting.rs  view.rs
src/actions/: change.rs  cpaste.rs  delete.rs  insert.rs  motion.rs  search.rs  select.rs  system_editor.rs
src/buffer/: mode.rs  undo.rs
src/clipboard/: arboard.rs
src/editor/: state.rs  theme.rs  view.rs
src/events/: deprecated_input.rs  input.rs  key.rs  mod.rs  mouse.rs  paste.rs  register.rs
src/events/key/: deprecated.rs  input.rs
src/input/: key.rs  register.rs
src/lines/: iterator.rs
src/state/: highlight.rs  mode.rs  position.rs  search.rs  selection.rs  undo.rs  view.rs
src/view/: internal.rs  line_wrapper.rs  render_line.rs  status_line.rs  syntax_higlighting.rs  theme.rs
