[package]
name = "edtui"
version = "0.8.0"
edition = "2021"
repository = "https://github.com/preiter93/edtui"
keywords = ["ratatui", "tui", "editor", "text", "vim"]
description = "A TUI based vim inspired editor"
authors = ["preiter <phil.reiter93@gmail.com>"]
license = "MIT"

[dependencies]
ratatui = { package = "ratatui", version = "0.28", features = ["unstable"] }
# jagged = { package = "edtui-jagged", path="../edtui-jagged", version = "0.1.6" }
jagged = { package = "edtui-jagged", version = "0.1.7" }
enum_dispatch = "0.3.12"
arboard = { version = "3.3.0", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
unicode-width = "0.2.0"

[[example]]
name = "app"

[features]
default = ["arboard", "mouse-support"]
arboard = ["dep:arboard"]
mouse-support = [] # experimental
