[package]
name = "edtui"
version = "0.9.4"
edition = "2021"
repository = "https://github.com/preiter93/edtui"
keywords = ["ratatui", "tui", "editor", "text", "vim"]
description = "A TUI based vim inspired editor"
authors = ["preiter <phil.reiter93@gmail.com>"]
license = "MIT"

[dependencies]
ratatui = { package = "ratatui", version = "0.29", features = ["unstable"] }
# jagged = { package = "edtui-jagged", path="../edtui-jagged", version = "0.1.12" }
jagged = { package = "edtui-jagged", version = "0.1" }
enum_dispatch = "0.3.12"
arboard = { version = "3.3.0", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
unicode-width = "0.2.0"
syntect = { version = "5.2.0", optional = true }
once_cell = { version = "1", optional = true }

[[example]]
name = "app"
required-features = ["syntax-highlighting"]

[[example]]
name = "syntax_highlighting"
required-features = ["syntax-highlighting"]

[[example]]
name = "test_text"

[features]
default = ["arboard", "mouse-support", "syntax-highlighting"]
arboard = ["dep:arboard"]
mouse-support = [] # experimental
syntax-highlighting = ["dep:syntect", "dep:once_cell"] # experimental
