[package]
name = "edtui-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.edtui]
path = ".."
features = ["arbitrary"]

[[bin]]
name = "state"
path = "fuzz_targets/state.rs"
test = false
doc = false
bench = false
